--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
  <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType:webcam;sourceWidth:1280;sourceHeight:960;displayWidth:1280;displayHeight:960;debugUIEnabled:false">
   <a-assets>
-    <img id="card1" src="./assets/icon-01.png"> 
-    <img id="card2" src="./assets/icon-02.png">
-    <img id="card3" src="./assets/icon-03.png"> 
-    <img id="card4" src="./assets/icon-04.png"> 
-    <img id="card5" src="./assets/icon-05.png"> 
-    <img id="card6" src="./assets/icon-06.png"> 
+    <img id="card1" src="./VR-AR-ProjectCards/1.png"> 
+    <img id="card2" src="./VR-AR-ProjectCards/2.png">
+    <img id="card3" src="./VR-AR-ProjectCards/3.png"> 
+    <img id="card4" src="./VR-AR-ProjectCards/4.png"> 
+    <img id="card5" src="./VR-AR-ProjectCards/5.png"> 
+    <img id="card6" src="./VR-AR-ProjectCards/6.png"> 
 
 
   </a-assets>
